--- a/.github/workflows/pr-pdf-preview.yml
+++ b/.github/workflows/pr-pdf-preview.yml
@@ -21,6 +21,11 @@ jobs:
       with:
         ref: ${{ github.event.pull_request.head.sha }}
 
+    - name: Check formatting (typstyle)
+      uses: typstyle-rs/typstyle-action@v0.9.3
+      with:
+        opts: --check
+
     - name: Setup Typst
       uses: typst-community/setup-typst@v3
 
