--- a/.github/workflows/release-pdf.yml
+++ b/.github/workflows/release-pdf.yml
@@ -2,9 +2,9 @@ name: Create Release with compiled PDF
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - '**.typ'
+      - "**.typ"
 
 jobs:
   create-release:
@@ -13,48 +13,48 @@ jobs:
       contents: write
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Check formatting (typstyle)
-      uses: typstyle-rs/typstyle-action@v0.9.3
-      with:
-        opts: --check
+      - name: Check formatting (typstyle)
+        uses: typstyle-rs/typstyle-action@v0.9.3
+        with:
+          opts: --check
 
-    - name: Setup Typst
-      uses: typst-community/setup-typst@v3
+      - name: Setup Typst
+        uses: typst-community/setup-typst@v3
 
-    - name: Compile Typst document
-      run: |
-        typst compile main.typ template.pdf
+      - name: Compile Typst document
+        run: |
+          typst compile main.typ template.pdf
 
-    - name: Upload PDF as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: template-pdf-release
-        path: template.pdf
-        retention-days: 90
+      - name: Upload PDF as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: template-pdf-release
+          path: template.pdf
+          retention-days: 90
 
-    - name: Get current date
-      id: date
-      run: echo "date=$(date +'%d/%m/%Y')" >> $GITHUB_OUTPUT
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%d/%m/%Y')" >> $GITHUB_OUTPUT
 
-    - name: Create Release with PDF
-      uses: softprops/action-gh-release@v2
-      with:
-        tag_name: release-${{ github.sha }}
-        name: Compiled PDF ${{ steps.date.outputs.date }} (${{ github.sha }})
-        body: |
-          🎓 **Template - PDF ${{ steps.date.outputs.date }} (${{ github.sha }})**
+      - name: Create Release with PDF
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: release-${{ github.sha }}
+          name: Compiled PDF ${{ steps.date.outputs.date }} (${{ github.sha }})
+          body: |
+            🎓 **Template - PDF ${{ steps.date.outputs.date }} (${{ github.sha }})**
 
-          Automated release created from main branch with the latest version of the course notes.
+            Automated release created from main branch with the latest version of the course notes.
 
-          **Release Details:**
-          - Generated from commit: ${{ github.sha }}
-          - Build date: ${{ steps.date.outputs.date }}
-          - PDF compiled with latest Typst version
+            **Release Details:**
+            - Generated from commit: ${{ github.sha }}
+            - Build date: ${{ steps.date.outputs.date }}
+            - PDF compiled with latest Typst version
 
-          **Download:** The PDF is attached to this release as `template.pdf`
-        files: template.pdf
-        draft: false
-        prerelease: false
+            **Download:** The PDF is attached to this release as `template.pdf`
+          files: template.pdf
+          draft: false
+          prerelease: false
