--- a/.github/workflows/pr-pdf-comment.yml
+++ b/.github/workflows/pr-pdf-comment.yml
@@ -12,6 +12,7 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
+      actions: read
 
     steps:
       - name: Announce PDF artifact on PR
@@ -29,8 +30,10 @@ jobs:
             const owner = context.repo.owner
             const repo = context.repo.repo
             const runId = run.id
+            const shortSha = run.head_sha.substring(0, 7)
             const workflowUrl = run.html_url || `${context.payload.repository.html_url}/actions/runs/${runId}`
             const expectedName = `pr-${pr.number}-preview`
+            const marker = `<!-- pdf-preview-bot pr-${pr.number} -->`
 
             const artifactsResponse = await github.rest.actions.listWorkflowRunArtifacts({
               owner,
@@ -45,18 +48,38 @@ jobs:
               return
             }
 
-            const body = `
-            📄 **Anteprima PDF disponibile**
+            const body = `${marker}
+            📄 **PDF Preview available**
 
-            L'ultima compilazione è stata eseguita sul commit \`${run.head_sha.substring(0, 7)}\`.
+            Latest build ran on commit \`${shortSha}\`.
 
-            **📥 Per scaricare il PDF:**
-            1. [Apri il workflow run](${workflowUrl})
-            2. Vai alla sezione **Artifacts**
-            3. Scarica \`${expectedName}\`
+            **📥 To download the PDF:**
+            1. [Open the workflow run](${workflowUrl})
+            2. Go to the **Artifacts** section
+            3. Download \`${expectedName}\`
 
-            L'artifact resta disponibile per 30 giorni.
-            `
+            The artifact is available for 30 days.`
+
+            const existingComments = await github.rest.issues.listComments({
+              owner,
+              repo,
+              issue_number: pr.number,
+            })
+
+            const existing = existingComments.data.find(c => c.body && c.body.includes(marker))
+
+            if (existing) {
+              try {
+                await github.rest.issues.deleteComment({
+                  owner,
+                  repo,
+                  comment_id: existing.id,
+                })
+                core.info(`Deleted previous comment on PR #${pr.number}`)
+              } catch (e) {
+                core.warning(`Could not delete previous comment: ${e.message}`)
+              }
+            }
 
             await github.rest.issues.createComment({
               owner,
