--- a/.github/workflows/pr-pdf-preview.yml
+++ b/.github/workflows/pr-pdf-preview.yml
@@ -37,11 +37,11 @@ jobs:
 
       - name: Compile Typst document
         run: |
-          typst compile main.typ template-preview.pdf
+          typst compile main.typ ${{ github.event.repository.name }}-preview.pdf
 
       - name: Upload PDF as artifact
         uses: actions/upload-artifact@v4
         with:
           name: pr-${{ github.event.pull_request.number }}-preview
-          path: template-preview.pdf
+          path: ${{ github.event.repository.name }}-preview.pdf
           retention-days: 30
